methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:11: error: ';' expected but 'else' found.
    }else{
     ^SlugHunting:17: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:31: error: Unmatched closing brace '}' ignored here
}
^